Fix list item margin and wrap

--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -111,11 +111,12 @@ ol {
 
   li {
     margin-top: $unit-2;
+    margin-left: $unit-4;
   }
 }
 
 ul {
-  list-style: disc inside;
+  list-style: disc outside;
 
   ul {
     list-style-type: circle;
@@ -123,7 +124,7 @@ ul {
 }
 
 ol {
-  list-style: decimal inside;
+  list-style: decimal outside;
 
   ol {
     list-style-type: lower-alpha;
